src/components/Sections/SectionList.less
.section-list {
  .list-item {
    display: table-row !important;
    align-items: center;
    margin: 5px 10px !important;
    .right-list-value {
      display: table-cell;
      margin-right: 5px;
      vertical-align: middle;
    }
    .left-list-value {
      display: table-cell;
      margin: 0 !important;
      vertical-align: middle;
    }
    .content:last-child {
      display: table-cell;
      text-align: center;
      vertical-align: middle;
    }
  }
}

